--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_ENV=testing
-APP_KEY=base64:g3q8BQgHAvVEXUlI02b1J5/qrMAp3grpmulvOvRLep0=
+APP_KEY=Generate key
 DB_CONNECTION=mariadb
 DB_HOST=mariadb
 DB_PORT=3306
